# hub

./: .env  Cargo.toml  configuration.yaml
.github/workflows/: general.yml
migrations/: 20210505162231_create_notes_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: health_check.rs  mod.rs  notes.rs
tests/: health_check.rs
