[package]
name = "hub"
version = "0.1.0"
authors = ["Headwiki"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "hub"

[dependencies]
actix-web = "4.0.0-beta.5"
actix-service = "2.0.0"
serde = { version = "1", features = ["derive"]}
sqlx = { version = "0.5.2", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
config = "0.11"

[dev-dependencies]
actix-rt = "2.0.2"
reqwest = "0.11"
tokio = "1"